# mujoco-RMsimulate

./: CMakeLists.txt  README.md
data/: data.csv
install/: MUJOCO_LOG.TXT
meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
model/: RM75-6F.STEP.SLDASM.xml  ball.xml  doublependulum.xml  doublependulum_fsm.xml  doublependulum_ik.xml  hybrid_pendulum.xml  pendulum.xml  pendulum_ik.xml
src/: arm.cpp  doublependulum.cpp  doublependulum_fsm.cpp  doublependulum_ik.cpp  hybrid_pendulum.cpp  main.cpp  pendulum.cpp  pendulum_ik.cpp
